--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,7 @@ body {
     background-color: var(--body-background-color);
     margin: 0;
     
+    
 }
 
 header {
@@ -51,6 +52,10 @@ h1 {
     border: none;
     color: var(--text-color);
     
+}
+
+#switch-mode img{
+    margin-right: 0px;
 }
 
 
@@ -456,6 +461,15 @@ label{
     }
 }
 
+.dark-mode-btn {
+    display: none;
+  }
+  @media (prefers-color-scheme: light) {
+    .dark-mode-btn {
+      display: block;
+    }
+  }
+
 
 /* //////// */
 
@@ -478,11 +492,13 @@ label{
     --light-background-color: hsl(209, 23%, 22%);
     --header-box-shadow: 0px 5px 11px -7px rgba(0, 0, 0, 0.7);
     --h1-color: hsl(0, 0%, 98%);
-    --searching-bar-box-shadow: 0px 0px 30px -7px rgba(0, 0, 0, 0.7);
-    --region-filter-box-shadow: 0px 0px 30px -7px rgba(0, 0, 0, 0.7);
+    --searching-bar-box-shadow: 0px 0px 30px -7px rgba(129, 129, 129, 0.7);
+    --region-filter-box-shadow: 0px 0px 30px -7px rgba(129, 129, 129, 0.7);
     --ul-box-shadow: 0px 9px 9px -6px rgba(0, 0, 0, 0.7);
     --country-list-box-shadow: 0px 0px 30px -7px rgba(0, 0, 0, 0.7);
     --text-color: hsl(0, 0%, 98%);
     --search-output-box-shadow: 0px 9px 9px -6px rgba(0, 0, 0, 0.7);
     --hover-text-color: rgb(193, 193, 193);
 }
+
+
