--- a/details.css
+++ b/details.css
@@ -49,9 +49,15 @@ h1 {
     justify-content: center;
     background-color: var(--light-background-color);
     border: none;
+    transition: transform ease 0.2s;
     
 }
 
+
+#switch-mode:hover{
+    cursor: pointer;
+    transform: scale(1.05);
+}
 
 .container-details {
 
