--- a/styles.css
+++ b/styles.css
@@ -187,6 +187,7 @@ li:hover{
     z-index: 1;
     margin: 0px 10px 20px 10px;
     transition: transform 0.25s ease-in ;
+    text-decoration: none;
 }
 
 .country-list:hover {
@@ -231,7 +232,6 @@ span{
     width: 90%;
     border-radius: 10px;
     margin-top: 0;
-    height: auto;
     max-height: 200px;
     overflow-y: scroll;
     overflow-x: hidden;
