--- a/styles.css
+++ b/styles.css
@@ -87,6 +87,7 @@ main{
     border-radius: 10px;
     margin-bottom: 15px;
     box-shadow: var(--searching-bar-box-shadow);
+    
 }
 
 input {
@@ -231,7 +232,7 @@ span{
     background-color: var(--light-background-color);
     width: 90%;
     border-radius: 10px;
-    margin-top: 0;
+    margin-top: 0px;
     max-height: 200px;
     overflow-y: scroll;
     overflow-x: hidden;
@@ -479,7 +480,7 @@ label{
   }
 
 
-/* //////// */
+/* classes for the display mode*/
 
  :root {
     --body-background-color: hsl(0, 0%, 98%);
@@ -507,6 +508,57 @@ label{
     --text-color: hsl(0, 0%, 98%);
     --search-output-box-shadow: 0px 9px 9px -6px rgba(0, 0, 0, 0.7);
     --hover-text-color: rgb(193, 193, 193);
+}
+
+/* classes for handleing margins of searching bar and output */
+
+/* classes for handling searchbar screen size > 800px  */
+
+.search-output-OneResultWide{
+    
+    margin-top: -105px;
+  
+    
+}  
+.search-output-ThreeResultWide{
+   
+    margin-top: -65px;
+   
+    
+}  
+.search-output-AllResult{
+    grid-column: 1 / 6;
+    display: block;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
+    border-radius: 10px;
+    margin-top: 0px;
+    height: auto;
+    max-height: 200px;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    scroll-behavior: smooth;
+    box-sizing: border-box;
+    margin-bottom: -150px;
+    margin-left: 0px;
+    
+}  
+
+/* classes for handling searchbar screen size > 800px  */
+
+.coutries-wrapper-searchBar-narrow {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        margin: 55px 0px 0px 0px;
+        position: relative;
+        flex-wrap: wrap;
+        
+    
+    
 }
 
 
